--- a/package.json
+++ b/package.json
@@ -1,67 +1,164 @@
 {
-  "name": "test-webgl",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/test-utils": "^1.0.3",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/airbnb"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {},
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "jest": true
-        }
-      }
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "jest": {
-    "preset": "@vue/cli-plugin-unit-jest"
-  }
+   "name": "test-webgl",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "serve": "vue-cli-service serve",
+      "build": "vue-cli-service build",
+      "test:unit": "vue-cli-service test:unit",
+      "lint": "vue-cli-service lint"
+   },
+   "dependencies": {
+      "core-js": "^3.6.5",
+      "eslint-config-prettier": "^6.15.0",
+      "eslint-import-resolver-alias": "^1.1.2",
+      "eslint-plugin-filenames": "^1.3.2",
+      "eslint-plugin-prettier": "^3.1.4",
+      "vue": "^2.6.11",
+      "vue-router": "^3.2.0",
+      "vuex": "^3.4.0"
+   },
+   "devDependencies": {
+      "@nuxtjs/eslint-config": "^4.0.0",
+      "@vue/cli-plugin-babel": "~4.5.0",
+      "@vue/cli-plugin-eslint": "~4.5.0",
+      "@vue/cli-plugin-router": "~4.5.0",
+      "@vue/cli-plugin-unit-jest": "~4.5.0",
+      "@vue/cli-plugin-vuex": "~4.5.0",
+      "@vue/cli-service": "~4.5.0",
+      "@vue/eslint-config-airbnb": "^5.0.2",
+      "@vue/test-utils": "^1.0.3",
+      "babel-eslint": "^10.1.0",
+      "eslint": "^6.7.2",
+      "eslint-plugin-import": "^2.22.1",
+      "eslint-plugin-vue": "^6.2.2",
+      "sass": "^1.26.5",
+      "sass-loader": "^8.0.2",
+      "vue-template-compiler": "^2.6.11"
+   },
+   "eslintConfig": {
+      "root": true,
+      "env": {
+         "node": true
+      },
+      "extends": [
+         "eslint:recommended",
+         "@nuxtjs",
+         "airbnb-base",
+         "prettier/vue",
+         "plugin:prettier/recommended"
+      ],
+      "parserOptions": {
+         "parser": "babel-eslint"
+      },
+      "rules": {
+         "class-methods-use-this": "off",
+         "func-names": [
+            "error",
+            "as-needed"
+         ],
+         "import/extensions": [
+            "error",
+            "always",
+            {
+               "js": "never",
+               "vue": "never"
+            }
+         ],
+         "import/prefer-default-export": "off",
+         "no-console": [
+            "warn",
+            {
+               "allow": [
+                  "error"
+               ]
+            }
+         ],
+         "no-debugger": "warn",
+         "no-param-reassign": "off",
+         "no-shadow": "off",
+         "no-underscore-dangle": "off",
+         "no-use-before-define": [
+            "error",
+            {
+               "functions": false
+            }
+         ],
+         "object-shorthand": [
+            "warn",
+            "always"
+         ],
+         "padding-line-between-statements": [
+            "warn",
+            {
+               "blankLine": "always",
+               "prev": "*",
+               "next": "if"
+            },
+            {
+               "blankLine": "always",
+               "prev": "if",
+               "next": "*"
+            },
+            {
+               "blankLine": "always",
+               "prev": [
+                  "const",
+                  "let",
+                  "var"
+               ],
+               "next": "*"
+            },
+            {
+               "blankLine": "any",
+               "prev": [
+                  "const",
+                  "let",
+                  "var"
+               ],
+               "next": [
+                  "const",
+                  "let",
+                  "var"
+               ]
+            }
+         ],
+         "prettier/prettier": "warn",
+         "require-await": "error",
+         "standard/computed-property-even-spacing": "off",
+         "vue/match-component-file-name": [
+            "error",
+            {
+               "extensions": [
+                  "vue"
+               ],
+               "shouldMatchCase": true
+            }
+         ],
+         "vue/name-property-casing": [
+            "error",
+            "kebab-case"
+         ],
+         "vue/no-template-shadow": "off"
+      },
+      "overrides": [
+         {
+            "files": [
+               "**/__tests__/*.{j,t}s?(x)",
+               "**/tests/unit/**/*.spec.{j,t}s?(x)"
+            ],
+            "env": {
+               "jest": true
+            }
+         }
+      ]
+   },
+   "browserslist": [
+      "> 1%",
+      "last 2 versions",
+      "not dead"
+   ],
+   "jest": {
+      "preset": "@vue/cli-plugin-unit-jest"
+   }
 }
