--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
       "lint": "vue-cli-service lint"
    },
    "dependencies": {
+      "buefy": "^0.9.4",
+      "bulma": "^0.9.1",
       "core-js": "^3.6.5",
       "eslint-config-prettier": "^6.15.0",
       "eslint-import-resolver-alias": "^1.1.2",
@@ -53,12 +55,20 @@
       ],
       "settings": {
          "import/resolver": {
-             "alias": {
-                 "extensions": [".js", ".vue"],
-                 "map": [["@", "./src"]]
-             }
+            "alias": {
+               "extensions": [
+                  ".js",
+                  ".vue"
+               ],
+               "map": [
+                  [
+                     "@",
+                     "./src"
+                  ]
+               ]
+            }
          }
-     },
+      },
       "parserOptions": {
          "parser": "babel-eslint",
          "sourceType": "module"
