--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
    },
    "dependencies": {
       "buefy": "^0.9.4",
-      "bulma": "^0.9.1",
       "core-js": "^3.6.5",
       "eslint-config-prettier": "^6.15.0",
       "eslint-import-resolver-alias": "^1.1.2",
       "eslint-plugin-filenames": "^1.3.2",
       "eslint-plugin-prettier": "^3.1.4",
+      "three": "^0.122.0",
       "vue": "^2.6.11",
       "vue-router": "^3.2.0",
       "vuex": "^3.4.0"
